# shipment_management

./: .dockerignore  .gitignore  Dockerfile  entrypoint.sh  pyproject.toml  readme.md
providers/: __init__.py  abstract.py  clients.py  exceptions.py  models.py  providers.py  serializers.py  utils.py
providers/migrations/: 0001_initial.py
shipment/: models.py  serializers.py  tasks.py  tests.py  urls.py  viewsets.py
shipment/migrations/: 0001_initial.py
shipment_management/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
